--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,8 +1,10 @@
 [bumpversion]
-current_version = 0.1.1
+current_version = 0.1.2
 commit = True
 tag = True
 tag_name = {new_version}
 
 [bumpversion:file:probe.py]
+
+[bumpversion:file:Makefile]
 
