--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python: ["3.6"]
 install:
   - pip install pipenv
   - pipenv install --dev
-  - make build_image
+  - docker build --rm --tag probe:0.4.0 .
 
 script:
-  - make test_image
+  - python ./test_units.py
