Fix potential issue with PR-triggered built
See https://github.com/crossdock/crossdock/issues/31
See https://github.com/travis-ci/travis-ci/issues/6652#issuecomment-255597049

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ script:
   - make test_image
 
 after_success:
-  - if ["$TRAVIS_BRANCH" == "master"]; then
+  - BRANCH=${TRAVIS_PULL_REQUEST_BRANCH:-${TRAVIS_BRANCH}};
+    if [ "${BRANCH}" == "master" ]; then
       docker login -u "$REGISTRY_USERNAME" -p "$REGISTRY_PASSWORD";
-      make push_image
+      make push_image;
     fi
